style: adição da divButtonsTarefa na li e estilização

--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -74,3 +74,9 @@ li {
   border-radius: 50%;
   background-color: red;
 }
+
+.btn-tarefas {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
