--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -69,14 +69,20 @@ li {
 }
 
 .delete {
-  height: 20px;
-  width: 20px;
-  border-radius: 50%;
+  
   background-color: red;
+  margin-right: 5px;
 }
 
 .btn-tarefas {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+input[type=checkbox], .delete{
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+
 }
