--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -41,12 +41,16 @@ button {
   justify-content: center;
 }
 
-#tarefa,
-li {
+#tarefa {
   width: 100%;
   height: 40px;
   padding: 10px;
   font-size: 18px;
+}
+li {
+  width: 100%;
+  padding: 10px;
+  text-align: justify;
 }
 
 .aviso {
@@ -66,6 +70,7 @@ li {
 .box-new-tarefa {
   display: flex;
   align-items: center;
+ 
 }
 
 .delete {
