--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -11,6 +11,7 @@ body {
   background-color: lightblue;
 }
 
+
 .box-list {
   max-width: 640px;
   margin: 50px auto;
@@ -27,7 +28,6 @@ li {
   background-color: lightcyan;
   display: inline-flex;
   align-items: center;
-  justify-content: space-between;
   margin-top: 2px;
 }
 ul {
@@ -89,8 +89,10 @@ input[type=checkbox], .delete{
   height: 20px;
   width: 20px;
   border-radius: 50%;
+  margin-right: 5px;
+
 
 }
-input[type=checkbox]:checked ~ li{
-  background-color: blue;
+.concluido {
+  background-color: green;
 }
