--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -41,11 +41,12 @@ button {
   justify-content: center;
 }
 
-#tarefa {
+#tarefa, #search {
   width: 100%;
   height: 40px;
   padding: 10px;
   font-size: 18px;
+  margin: 5px 0;
 }
 li {
   width: 100%;
@@ -82,11 +83,16 @@ li {
 }
 
 input[type=checkbox], .delete{
-  height: 30px;
-  width: 30px;
+  height: 20px;
+  width: 20px;
   margin-right: 5px;
   background-color: transparent;
 
+}
+
+.delete{
+  border: none;
+  background-size: contain;
 }
 .concluido {
   background-color: green;
